# reBOrN

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Readme.md  build.rs  make_macos_app.sh  rustfmt.toml
.github/workflow/: release.yml
.github/workflows/: release.yml
crates/classfile/: .gitignore  Cargo.toml  README.md  gen_opcodes_map.py  pyproject.toml
crates/classfile/src/: access_flags.rs  attributes.rs  class_reader.rs  class_writer.rs  classfile.rs  constant_pool_tag.rs  field.rs  lib.rs  method.rs  mutf8.rs  opcodes.rs  signature_parser.rs  test_signature_parser.rs  type_alias.rs
crates/decompiler/: .gitignore  Main.java
crates/decompiler/src/: jclass.rs  main.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  colors.rs  components.rs  lib.rs  localisation.rs  ui_consts.rs  utils.rs
crates/gui/src/components/: compact_toggle.rs  extra_mappings.rs  file_select.rs  mod.rs  picked_file.rs  remap_target_select.rs  remapper_args.rs  select_from_enum.rs
crates/gui/src/containers/: mod.rs
crates/gui/src/containers/app_stages/: debug_stages.rs  mod.rs  ready.rs  validating_cache.rs
crates/mc_deobf/: Cargo.toml
crates/mc_deobf/src/: args.rs  lib.rs  mappings.rs  remapper.rs
crates/tsrg_trie/src/: lib.rs  tsrg_parser.rs
crates/utils/: Cargo.toml
crates/utils/src/: cache.rs  download.rs  lib.rs  split.rs  utils.rs
mappings/1.16.5/tsrg/: 1165_joined.tsrg
mappings/1.7.10/tsrg/: joined.tsrg
resources/: Info.plist.template  icon.icns
resources/localisation/: ru_RU.lang
src/: app.rs  cli.rs  deobfuscator.rs  lib.rs  main.rs  mappings.rs  remapper.rs  utils.rs
