[workspace]
members = ["crates/classfile", "crates/decompiler", "crates/gui", "crates/mc_deobf", "crates/tsrg_trie", "crates/utils"]

[workspace.package]
authors = ["Georgii Imeshkenov <georgiiimesh@gmail.com>"]
edition = "2024"
rust-version = "1.89.0"

[workspace.dependencies]
zip = { version = "8.5.1", default-features = false, features = ["deflate", "deflate-zopfli"] }
indoc = { version = "2.0.7" }

[package]
name = "reborn"
version = "1.0.0"
authors = ["Georgii Imeshkenov <georgiiimesh@gmail.com>"]
edition = "2024"
rust-version = "1.89.0"

[package.metadata.bundle]
name = "reBOrN"
identifier = "me.veritaris.jarremapper"
icon = ["resources/icon.ico"]

[dependencies]
# Workspace dependencies first
zip = { workspace = true }
indoc = { workspace = true }

clap = { version = "4.5.53", features = ["derive"] }
colored = { version = "3.0.0" }

gui = { path = "crates/gui" }
utils = { path = "crates/utils" }
mc_deobf = { path = "crates/mc_deobf" }

[build-dependencies]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[profile.release]
strip = true

[profile.dev.package."*"]
opt-level = 0

[patch.crates-io]

[features]
cli = []
jni = []
gui = []
