[package]
name = "gui"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["jpeg", "png"] } # Add the types you want support for
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.7"
linked-hash-map = { version = "0.5.6", default-features = false }
lazy_static = "1.5.0"

utils = { path = "../utils" }
