[package]
name = "gui"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
utils = { path = "../utils" }
classfile = { path = "../classfile" }
mc_deobf = { path = "../mc_deobf" }

egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui-file-dialog = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
linked-hash-map = { version = "0.5.6", default-features = false }
rfd = { version = "0.16.0" }
egui-notify = { version = "0.21.0" }
