[package]
name = "mc_deobf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
utils = { path = "../utils" }
classfile = { path = "../classfile" }
tsrg_trie = { path = "../tsrg_trie" }
linked-hash-map = { version = "0.5.6", default-features = false }
csv = { version = "1.4.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
num_cpus = { version = "1.17.0" }
indoc = { version = "2.0.7", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate", "deflate-zopfli"] }
url = "2.5.8"
