[package]
name = "utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "brotli", "default-tls"] }
directories-next = { version = "2.0.0", default-features = false }
ron = { version = "0.10.1" }
sha256 = { version = "1.6.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = { version = "1.5.0" }
serde_json = { version = "1.0.140" }
linked-hash-map = { version = "0.5.6", default-features = false }
